--- a/Dnd.Exaltado.Web/Dnd.Exaltado.Web.csproj
+++ b/Dnd.Exaltado.Web/Dnd.Exaltado.Web.csproj
@@ -12,6 +12,10 @@
     <PackageReference Include="Tether.New" Version="1.3.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Dnd.Exaltado.Players\Dnd.Exaltado.Players.csproj" />
+  </ItemGroup>
+
 
 
 </Project>
