--- a/Dnd.Exaltado.Web/Dnd.Exaltado.Web.csproj
+++ b/Dnd.Exaltado.Web/Dnd.Exaltado.Web.csproj
@@ -5,14 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="bootstrap" Version="4.3.1" />
-    <PackageReference Include="FontAwesome" Version="4.7.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="Tether.New" Version="1.3.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Dnd.Exaltado.CrossCutting\Dnd.Exaltado.CrossCutting.csproj" />
     <ProjectReference Include="..\Dnd.Exaltado.Players\Dnd.Exaltado.Players.csproj" />
   </ItemGroup>
 
