Comunicação com Banco

--- a/Dnd.Exaltado.Infra.DB/Dnd.Exaltado.Infra.DB.csproj
+++ b/Dnd.Exaltado.Infra.DB/Dnd.Exaltado.Infra.DB.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Dnd.Exaltado.CrossCutting\Dnd.Exaltado.CrossCutting.csproj" />
   </ItemGroup>
 
