--- a/Dnd.Exaltado.Web/appsettings.json
+++ b/Dnd.Exaltado.Web/appsettings.json
@@ -9,7 +9,8 @@
   "AllowedHosts": "*",
 
   "DB": {
-    "ConncetionString": "bbbbbb"
+    "ConncetionString": "Data Source=SQL5045.site4now.net;Initial Catalog=DB_A551C2_dndExaltado;User Id=DB_A551C2_dndExaltado_admin;Password=mudar@123;"
+
 
   }
 }
