Melhoria para Cadastros e Cadastro de Monstros

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,7 @@
 *.ide
 *.ide-shm
 *.ide-wal
-Dnd.Exaltado.Web/obj/
-Dnd.Exaltado.Web/bin/
 .vs/
 *.user
-Dnd.Exaltado.Players/bin/
-Dnd.Exaltado.Players/obj/
+bin
+obj
